--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,7 @@ GITHUB_TOKEN
 PORT
 
 # PostgreSQL
-POSTGRES_HOST
-POSTGRES_PORT
-POSTGRES_USER
-POSTGRES_PASSWORD
-POSTGRES_DB
+POSTGRES_URL
 
 # Redis
 REDIS_URL
-REDIS_PORT
